@@ -14,6 +14,8 @@ Lua:
 
 Misc:
  - remove joystick support
+ - detect hangs during filesystem initialisation
+ - fix stale thread-id cache in watchdog after reload
  - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 
 
